# solid/api/v1/v1.go
@@ -34,7 +34,7 @@ func BuildRoutes(f *fiber.App, middlewares ...fiber.Handler) error {
 	v1.Get("/benchmarks", benchmarks)
 	v1.Get("/benchmark/:id", benchmark)
 	v1.Post("/benchmark", createBenchmark)
-	v1.Put("/benchmark/:id/toggle", toogleBenchmark)
+	v1.Put("/benchmark/:id/toggle", toggleBenchmark)
 	v1.Patch("/benchmark/:id", updateBenchmark)
 	v1.Delete("/benchmark/:id", deleteBenchmark)
 	v1.Get("/benchmark/:id/runs", benchmarkRuns)
